assignment3/app-2-ingress.yaml
# Definition of an Ingress for app-2

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-2-ingress
spec:
  # Routing rules for incoming requests
  rules:
    # HTTP rule for incoming traffic
    - http:
        # URL paths and corresponding backends
        paths:
          # Path matching type and path
          - pathType: Prefix
            path: "/"
            # Backend service for handling requests
            backend:
              service:
                name: app-2-service
                port:
                  number: 3000
  # Annotations for customizing Ingress behavior
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "30"
